--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
+
+    var html = document.documentElement;
+    // Create a new <html> element with the lang attribute set to "en"
+    var newHtml = document.createElement("html");
+    newHtml.setAttribute("lang", "en");
+    // Copy the child nodes of the old <html> element to the new one
+    var childNodes = html.childNodes;
+    for (var i = 0; i < childNodes.length; i++) {
+      newHtml.appendChild(childNodes[i].cloneNode(true));
+    }
+    // Replace the old <html> element with the new one
+    document.replaceChild(newHtml, html);
+    
     var serviceWorkerVersion = '2885765299';
     var scriptLoaded = false;
     function loadMainDartJs() {
