--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         // Set the language to English
         utterance.lang = "en";
         // Log the language to the console
+        console.log("tao ne1");
         console.log(utterance.lang);
       });
     });
